manifests/test-delete-later/hello-world-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - s6-fontys-rym-clone.nl
    secretName: tls-secret
  rules:
  - host: s6-fontys-rym-clone.nl
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
